--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         }
         .animate-orbit { animation: orbit 15s infinite ease-in-out; }
         
-        /* Стили для контурного текста на главной */
         .text-outline {
             -webkit-text-stroke: 2px rgba(255,255,255,0.3);
             color: transparent;
@@ -63,19 +62,20 @@
                 { id: '11', title: 'Дизайн-паки для групп/ботов', price: 'от 15.000 рублей' },
                 { id: '12', title: 'Адаптация стикеров Telegram', price: 'от 5.000 рублей' },
                 { id: '13', title: 'Нелинейный монтаж видео', price: 'от 15.000 рублей' },
-                { id: '14', title: 'Индивидуальные проекты', price: 'от 10.000 рублей' },
+                { id: '14', title: 'Индивидуальные проекты', price: 'от 3.000 рублей' },
                 { id: '15', title: 'Помощь с практиками', price: 'от 13.000 рублей' },
                 { id: '16', title: 'Дипломные работы', price: 'от 20.000 рублей' },
                 { id: '17', title: 'Курсовые работы', price: 'от 10.000 рублей' },
             ];
 
             const repos = [
-                { name: 'sellaccmarket', url: 'https://github.com/XQR4D/sellaccmarket', stack: 'Python, SQL, API', desc: 'Бот Telegram по продаже аккаунтов, скинов и т.д' },
+                { name: 'sellaccmarket (private)', url: 'https://github.com/XQR4D/sellaccmarket', stack: 'Python, SQL, API', desc: 'Бот Telegram по продаже аккаунтов, скинов и т.д' },
                 { name: 'bipbup', url: 'https://github.com/XQR4D/bipbup', stack: 'JavaScript, API Integration, Node.JS, HTML, Python', desc: 'Вебсайт для блоггера BIPBUP (60k+)' },
-                { name: 'kort', url: 'https://github.com/XQR4D/kort', stack: 'JavaScript, Yandex JS Integration, Vertex Map, HTML', desc: 'Коммерческий вебсайт для лизинговой организации' },
+                { name: 'kort', url: 'https://github.com/XQR4D/kort', stack: 'JavaScript, Yandex JS Integration, Vector Map, HTML', desc: 'Коммерческий вебсайт для лизинговой организации' },
                 { name: 'Nebula', url: 'https://github.com/XQR4D/Nebula', stack: 'JavaScript, HTML, Github API, Python', desc: '8-битный веб-плеер для просмотра роликов блоггера BIPBUP' },
                 { name: 'Sonar', url: 'https://github.com/XQR4D/Sonar', stack: 'JavaScript, HTML, Github API, Python, sh', desc: 'Open-Source плеер для загрузки, просмотра, скачивания видео' },
-                { name: 'MailRuAdBlockPlus', url: 'https://github.com/XQR4D/MailRuAdBlockPlus', stack: 'JS, Chrome Dev Tools, HTML, JS', desc: 'Блокировщик рекламы и оптимизатор для сервисов Mail.ru.' }
+                { name: 'MailRuAdBlockPlus', url: 'https://github.com/XQR4D/MailRuAdBlockPlus', stack: 'JS, Chrome Dev Tools, HTML', desc: 'Блокировщик рекламы и оптимизатор для сервисов Mail.ru.' },
+                { name: 'Pomodoro Timer', url: 'https://github.com/XQR4D/Pomodoro', stack: 'JavaScript, HTML, Github API, CSS', desc: 'Таймер помодоро для одноименной методики' }
             ];
 
             const mainSkills = ['JavaScript (Middle++)', 'HTML (Senior)', 'CSS5/3 (Middle++)', 'React (Learn)', 'C# (Learn)', 'C++ (Junior)', 'Typescript (Learn)', 'Python (Middle)', 'Node.js (Learn)', 'Git (Middle)', 'Tailwind (Learn)'];
@@ -142,10 +142,22 @@
                                     <div className="glass p-8 rounded-3xl border-purple-500/20">
                                         <h2 className="text-3xl font-bold mb-8 text-purple-400">Личное</h2>
                                         <div className="space-y-6 text-gray-200">
-                                            <p><b className="text-white">Возраст</b> 25 лет</p>
-                                            <p><b className="text-white">Опыт работы</b> 5 лет (8 вместе с изучением)</p>
-                                            <p><b className="text-white leading-relaxed">Активность</b> Сейчас сфокусирован на изучении React и Node.JS</p>
-                                            <p><b className="text-white">Соц.сети</b> @XQR4D, @balenciaga_telegram</p>
+                                            <div>
+                                                <p className="text-xs uppercase tracking-widest text-gray-400 mb-2">Возраст</p>
+                                                <p className="text-lg font-bold">25 лет</p>
+                                            </div>
+                                            <div className="pt-4 border-t border-white/10">
+                                                <p className="text-xs uppercase tracking-widest text-gray-400 mb-2">Опыт</p>
+                                                <p className="text-lg font-bold">5 лет + 3 года изучения</p>
+                                            </div>
+                                            <div className="pt-4 border-t border-white/10">
+                                                <p className="text-xs uppercase tracking-widest text-gray-400 mb-2">Активность</p>
+                                                <p className="text-lg font-bold">Сейчас сфокусирован на изучении React и Node.JS</p>
+                                            </div>
+                                            <div className="pt-4 border-t border-white/10">
+                                                <p className="text-xs uppercase tracking-widest text-gray-400 mb-2">Соц.сети</p>
+                                                <p className="text-lg font-bold">@XQR4D, @balenciaga_telegram</p>
+                                            </div>
                                             <div className="pt-4 border-t border-white/10">
                                                 <p className="text-xs uppercase tracking-widest text-gray-400 mb-2">Почта для связи</p>
                                                 <p className="text-lg font-bold">frozenjuggernaut@gmail.com</p>
