--- a/index.html
+++ b/index.html
@@ -146,19 +146,19 @@
                                                 <p className="text-xs uppercase tracking-widest text-gray-400 mb-2">Возраст</p>
                                                 <p className="text-lg font-bold">25 лет</p>
                                             </div>
-                                            <div className="pt-4 border-t border-white/10">
+                                            <div>
                                                 <p className="text-xs uppercase tracking-widest text-gray-400 mb-2">Опыт</p>
                                                 <p className="text-lg font-bold">5 лет + 3 года изучения</p>
                                             </div>
-                                            <div className="pt-4 border-t border-white/10">
+                                            <div>
                                                 <p className="text-xs uppercase tracking-widest text-gray-400 mb-2">Активность</p>
                                                 <p className="text-lg font-bold">Сейчас сфокусирован на изучении React и Node.JS</p>
                                             </div>
-                                            <div className="pt-4 border-t border-white/10">
+                                            <div>
                                                 <p className="text-xs uppercase tracking-widest text-gray-400 mb-2">Соц.сети</p>
                                                 <p className="text-lg font-bold">@XQR4D, @balenciaga_telegram</p>
                                             </div>
-                                            <div className="pt-4 border-t border-white/10">
+                                            <div>
                                                 <p className="text-xs uppercase tracking-widest text-gray-400 mb-2">Почта для связи</p>
                                                 <p className="text-lg font-bold">frozenjuggernaut@gmail.com</p>
                                             </div>
