--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
             const repos = [
                 { name: 'accountmarketbot', url: 'https://github.com/XQR4D/accountmarketbot', stack: 'Python, SQL, API, JSON', desc: 'Бот Telegram по продаже аккаунтов, скинов и т.д' },
-                { name: 'bipbup', url: 'https://github.com/XQR4D/bipbup', stack: 'JavaScript, API Integration, Node.JS, HTML, Python, CSS', desc: 'Вебсайт для блоггера BIPBUP (60k+)' },
+                { name: 'bipbup', url: 'https://github.com/XQR4D/bipbup', stack: 'JavaScript, HTML, Github API, CSS, React, Tailwind, Python, Google API, ROCS proxy', desc: 'Вебсайт для блоггера BIPBUP (60k+)' },
                 { name: 'kort', url: 'https://github.com/XQR4D/kort', stack: 'JavaScript, Yandex JS Integration, Vector Map, HTML, CSS', desc: 'Коммерческий вебсайт для лизинговой организации' },
                 { name: 'Nebula', url: 'https://github.com/XQR4D/Nebula', stack: 'JavaScript, HTML, Github API, Python, CSS', desc: '8-битный веб-плеер для просмотра роликов блоггера BIPBUP' },
                 { name: 'Sonar', url: 'https://github.com/XQR4D/Sonar', stack: 'JavaScript, HTML, Github API, Python, sh, CSS', desc: 'Open-Source плеер для загрузки, просмотра, скачивания видео' },
