--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                                         <h2 className="text-2xl md:text-3xl font-black mb-6 md:mb-8 uppercase tracking-tight">Личное</h2>
                                         <div className="space-y-5 md:space-y-6">
                                             {['Возраст', 'Опыт', 'Специализация', 'Соц.сети', 'Почта'].map((label, idx) => {
-                                                const vals = ['25 лет', '5 лет', 'Frontend/Backend', '@XQR4D, @balenciaga_telegram', 'frozenjuggernaut@gmail.com'];
+                                                const vals = ['Скрыт', '5 лет', 'Frontend/Backend', '@XQR4D, @balenciaga_telegram', 'frozenjuggernaut@gmail.com'];
                                                 return (
                                                     <div key={label}>
                                                         <p className="text-[10px] uppercase tracking-widest text-muted-color mb-1 font-black">{label}</p>
